--- a/style.css
+++ b/style.css
@@ -1,75 +1,87 @@
 html {
-    box-sizing: border-box;
-    font-size: 10px;
-    background: #f8d49d;
-  }
- 
-  body {
-    padding: 0;
-    margin: 0;
-    font-family: 'Amatic SC', cursive;
-  }
-  
-  h1 {
-    text-align: center;
-    font-size: 10rem;
-    line-height: 1;
-    margin-bottom: 0;
-    color: #d35d6e;
-  }
-
-
-.buttons {
-    display: flex;
-    justify-content: center;
-    margin: 20px;
+  box-sizing: border-box;
+  font-size: 10px;
+  background: #f8d49d;
 }
 
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Amatic SC", cursive;
+}
 
-  .score {
-    background: #efb08c;
-    padding: 0 3rem;
-    line-height: 1;
-    border-radius: 1rem;
-    color: #5aa469;
-  }
-  
-  .game {
-    width: 600px;
-    height: 400px;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-  }
-  
-  .hole {
-    flex: 1 0 33.33%;
-    overflow: hidden;
-    position: relative;
-  }
-  
-  .hole:after {
-    display: block;
-    background: url(dirt.svg) bottom center no-repeat;
-    background-size: contain;
-    content: '';
-    width: 100%;
-    height:70px;
-    position: absolute;
-    z-index: 2;
-    bottom: -30px;
-  }
-  
-  .mole {
-    background: url('mole.svg') bottom center no-repeat;
-    background-size: 60%;
-    position: absolute;
-    top: 100%;
-    width: 100%;
-    height: 100%;
-    transition:all 0.4s;
-  }
-  
-  .hole.up .mole {
-    top: 0;
-  }
+h1 {
+  text-align: center;
+  font-size: 10rem;
+  line-height: 1;
+  margin-bottom: 0;
+  color: #d35d6e;
+}
+
+.buttons {
+  position: absolute;
+  left: 50%;
+  z-index: 5;
+}
+
+.score {
+  background: #efb08c;
+  text-align: center;
+  height: 100px;
+  font-size: 70px;
+  padding: 0 3rem;
+  line-height: 1;
+  border-radius: 1rem;
+  color: #5aa469;
+}
+
+.highScoreBoard {
+  background: #efb08c;
+  height: 100px;
+  font-size: 70px;
+  text-align: center;
+  padding: 0 3rem;
+  line-height: 1;
+  border-radius: 1rem;
+  color: #f8d49d;
+}
+
+.game {
+  width: 600px;
+  height: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+.hole {
+  flex: 1 0 33.33%;
+  overflow: hidden;
+  position: relative;
+}
+
+.hole:after {
+  display: block;
+  background: url(dirt.svg) bottom center no-repeat;
+  background-size: contain;
+  content: "";
+  width: 100%;
+  height: 70px;
+  position: absolute;
+  z-index: 2;
+  bottom: -30px;
+}
+
+.mole {
+  background: url("mole.svg") bottom center no-repeat;
+  background-size: 60%;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 100%;
+  transition: all 0.4s;
+}
+
+.hole.up .mole {
+  top: 0;
+}
